# open-record-reply

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  registry.py  server.py  state.py
capture/: ax_client.py  capture_client.py  recorder.py
capture/native/: ax_hook_darwin.py  ax_hook_linux.py  ax_hook_win32.py
compiler/: compiler.py  md_generator.py  prompts.py  recommended_tools.json  tool_manifest.py
schema/: skill.schema.json
scripts/: test_native_desktop.py
tests/: conftest.py  test_ax_client.py  test_ax_hook_darwin.py  test_ax_hook_win32.py  test_compiler.py  test_md_generator.py  test_recorder.py  test_tool_manifest.py
